Use Java 11 collections conveniences everywhere
This commit replaces all applicable uses with Java 11 collections
convenience methods.